# forex-transformer-model

./: README.md  README.txt  mtf_specialized_lstm_enhancement.py  pyproject.toml
configs/: big_run.yaml  default.yaml  enhanced_transformer - Kopya.yaml  enhanced_transformer.yaml  temporal.yaml
configs/optuna/: best_EUR_USD_lstm_three_class.yaml  best_XAU_USD.yaml
src/: __init__.py  __init_backup.py  cli copy.py  cli.py  cli_backup.py  cli_backup2.py  cli_enhanced.py  cli_inference_backup.py  config.py
src/backtest/: __init__.py  k_pips_utils.py  mlflow_manager.py  runner.py  threshold_optimizer.py  trade_logic.py
src/config/: config_manager.py
src/data/: __init__.py  fetcher.py  preprocess.py
src/ensemble/: __init__.py  base_ensemble.py  dynamic_selector.py  ensemble_classifier.py  ensemble_monitor.py  ensemble_trainer copy.py  ensemble_trainer.py  ensemble_trainer_backup.py  ensemble_trainer_backup2.py  meta_learner.py
src/inference/: __init__.py  predictor.py
src/losses/: focal_loss.py
src/models/: __init__.py  enhanced_transformer.py  factory.py  hybrid_model.py  losses.py  lstm.py  pdf_hybrid.py  transformer_model.py
src/temporal/: __init__.py  temporal_trainer.py
src/training/: EnhancedMultiPairTrainer.py  __init__.py  optuna_transformer.py  optuna_utils.py  schedulers.py  trainer.py  trainer_backup.py  unified_trainer copy.py  unified_trainer.py  validation.py
src/tuning/: __init__.py  advanced_tuner.py
src/utils/: __init__.py  labels.py  temporal_plotting.py  training_monitor.py  training_timer.py  viz.py
